--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "countries-phone-masks": "^1.0.0",
+    "vee-validate": "3.3.9",
+    "vue": "^2.6.11",
+    "vue-google-autocomplete": "^1.1.2",
+    "vue-inline-svg": "^2.0.0",
+    "vue-password-strength-meter": "^1.7.2",
+    "vue-the-mask": "^0.11.1",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
